Changed visibility of links and fixed square borders

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -179,3 +179,12 @@ p.address {
 	width: 12rem;
 	margin-left: auto;
 }
+
+.container.welcome main {
+	border-radius: var(--border-radius);
+	position: relative;
+}
+
+a {
+	color: #46a8d0;
+}
